--- a/react-redux/todolist/package.json
+++ b/react-redux/todolist/package.json
@@ -1,25 +1,41 @@
 {
-  "name": "tutorial",
-  "version": "1.0.0",
-  "description": "",
+  "name": "simplest-redux-example",
+  "version": "0.0.0",
+  "description": "simplest redux + react example",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --content-base ."
+    "start": "browserify --debug --extension=js -o bundle.js index.js && http-server -p 8000"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jackielii/simplest-redux-example.git"
+  },
+  "keywords": [
+    "redux",
+    "react"
+  ],
+  "author": "Jackie Li",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jackielii/simplest-redux-example/issues"
+  },
+  "browserify": {
+    "transform": [
+      [ "babelify", { "presets": ["es2015", "react"] } ]
+    ]
+  },
+  "homepage": "https://github.com/jackielii/simplest-redux-example#readme",
   "dependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "http-server": "^0.8.5",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "http-server": "^0.9.0"
   }
 }
