--- a/20171001/webpack/webpack-demo/package.json
+++ b/20171001/webpack/webpack-demo/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "backbone": "^1.3.3",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
